--- a/index.html
+++ b/index.html
@@ -110,12 +110,69 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="portfolio-item">
-                            <a href="https://example.com/startup-shop" target="_blank">
+                            <a href="https://delicious-dine-six.vercel.app/" target="_blank">
                                 <div class="portfolio-image">
-                                    <img src="https://via.placeholder.com/600x400" class="img-fluid rounded" alt="Online Shop 1">
+                                    <img src="img/deliciousDine.png" class="img-fluid rounded" alt="Online Shop 1">
                                     <div class="portfolio-overlay">
-                                        <h5 class="mt-2">Boutique en ligne pour une startup</h5>
-                                        <p>Un site e-commerce dynamique pour une jeune entreprise.</p>
+                                        <h5 class="mt-2">Page en ligne d'un restaurant</h5>
+                                        <p>Un site en ligne permettant aux petites entreprises de presenter leurs services.</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="portfolio-item">
+                            <a href="https://sweet-treats.vercel.app/" target="_blank">
+                                <div class="portfolio-image">
+                                    <img src="img/sweet_treats.png" class="img-fluid rounded" alt="Online Shop 1">
+                                    <div class="portfolio-overlay">
+                                        <h5 class="mt-2">Page en ligne d'un commerce de patisserie</h5>
+                                        <p>Un site en ligne permettant aux petites entreprises ou particuliers de presenter leurs produits sur une page moderne.</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="portfolio-item">
+                            <a href="https://luxe-salon.vercel.app/" target="_blank">
+                                <div class="portfolio-image">
+                                    <img src="img/luxeSalon.png" class="img-fluid rounded" alt="Online Shop 1">
+                                    <div class="portfolio-overlay">
+                                        <h5 class="mt-2">Page en ligne d'un Salon de coiffure</h5>
+                                        <p>Un site en ligne présentant un salon et les differents modeles disponibles, site aussi adapté aux particuliers.</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="portfolio-item">
+                            <a href="https://premium-phone.vercel.app/" target="_blank">
+                                <div class="portfolio-image">
+                                    <img src="img/premiumPhone.png" class="img-fluid rounded" alt="Online Shop 1">
+                                    <div class="portfolio-overlay">
+                                        <h5 class="mt-2">Page en ligne d'une boutique de Iphone</h5>
+                                        <p>Un site en ligne parfait pour du E-Commerce de telephone pour boutique ou particuliers.</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+
+                    <div class="col-md-4">
+                        <div class="portfolio-item">
+                            <a href="https://fashion-hub-omega.vercel.app/" target="_blank">
+                                <div class="portfolio-image">
+                                    <img src="img/fashionhub.png" class="img-fluid rounded" alt="Online Shop 1">
+                                    <div class="portfolio-overlay">
+                                        <h5 class="mt-2">Exemple d'une page en ligne un peu plus poussee.</h5>
+                                        <p>Un site en ligne reservee aux business plus grands et demandant plus de fonctionalites .</p>
                                     </div>
                                 </div>
                             </a>
@@ -132,17 +189,48 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="portfolio-item">
-                            <a href="https://example.com/designer-portfolio" target="_blank">
+                            <a href="https://portfolio1-swart-three.vercel.app/" target="_blank">
                                 <div class="portfolio-image">
-                                    <img src="https://via.placeholder.com/600x400" class="img-fluid rounded" alt="Portfolio 1">
+                                    <img src="img/portfolio1.png" class="img-fluid rounded" alt="Portfolio 1">
                                     <div class="portfolio-overlay">
-                                        <h5 class="mt-2">Portfolio pour un designer</h5>
-                                        <p>Un site web épuré et moderne pour présenter des travaux créatifs.</p>
+                                        <h5 class="mt-2">Portfolio pour un etudiant en informatique</h5>
+                                        <p>Un site web osé et futuriste .</p>
                                     </div>
                                 </div>
                             </a>
                         </div>
                     </div>
+
+                    <div class="col-md-4">
+                        <div class="portfolio-item">
+                            <a href="https://portfolio2-one-green.vercel.app/" target="_blank">
+                                <div class="portfolio-image">
+                                    <img src="img/portfolio2.png" class="img-fluid rounded" alt="Portfolio 1">
+                                    <div class="portfolio-overlay">
+                                        <h5 class="mt-2">Portfolio pour un etudiant en Électrotechnique </h5>
+                                        <p>Un site web professionnel et sobre .</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                            <div class="portfolio-item">
+                                <a href="https://portfolio3-three-vert.vercel.app/" target="_blank">
+                                    <div class="portfolio-image">
+                                        <img src="img/portfolio3.png" class="img-fluid rounded" alt="Portfolio 1">
+                                        <div class="portfolio-overlay">
+                                            <h5 class="mt-2">Portfolio pour une etudiante en economie</h5>
+                                            <p>Un site web moderne et attrayant .</p>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                   
                     <!-- Add more projects for portfolios as needed -->
                 </div>
             </div>
@@ -154,12 +242,12 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="portfolio-item">
-                            <a href="https://example.com/family-page" target="_blank">
+                            <a href="https://family-web-virid.vercel.app/" target="_blank">
                                 <div class="portfolio-image">
-                                    <img src="https://via.placeholder.com/600x400" class="img-fluid rounded" alt="Family Page 1">
+                                    <img src="img/familyBlog.png" class="img-fluid rounded" alt="Family Page 1">
                                     <div class="portfolio-overlay">
-                                        <h5 class="mt-2">Page familiale pour un anniversaire</h5>
-                                        <p>Un site personnalisé pour célébrer un moment spécial en famille.</p>
+                                        <h5 class="mt-2">Page familiale</h5>
+                                        <p>Un site personnalisé pour conserver les souvenirs familiaux en ligne et les presenter aux autres !.</p>
                                     </div>
                                 </div>
                             </a>
@@ -264,7 +352,7 @@
                         <!-- Protection contre les spams (honeypot) -->
                         <input type="hidden" name="_honey" style="display:none">
                         <!-- Rediriger après l'envoi -->
-                        <input type="hidden" name="_next" value="https://votresite.com/merci.html">
+                        <input type="hidden" name="_next" value="https://web-snape.vercel.app/">
                         <!-- Adresse email destinataire -->
                         <input type="hidden" name="_email" value="yvandzefak1@gmail.com">
                         <button type="submit" class="btn btn-primary">Envoyer</button>
