--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                                     <img src="img/sweet_treats.png" class="img-fluid rounded" alt="Online Shop 1">
                                     <div class="portfolio-overlay">
                                         <h5 class="mt-2" data-lang="shop-item-2-title">Page en ligne d'un commerce de pâtisserie</h5>
-                                        <p data-lang="shop-item-2-description">Un site en ligne permettant aux petites entreprises ou particuliers de présenter leurs produits sur une page moderne.</p>
+                                        <p data-lang="shop-item-2-description">Un site en ligne permettant aux petites entreprises de présenter leurs produits.</p>
                                     </div>
                                 </div>
                             </a>
@@ -241,7 +241,7 @@
                                     <img src="img/luxeSalon.png" class="img-fluid rounded" alt="Online Shop 1">
                                     <div class="portfolio-overlay">
                                         <h5 class="mt-2" data-lang="shop-item-3-title">Page en ligne d'un Salon de coiffure</h5>
-                                        <p data-lang="shop-item-3-description">Un site en ligne présentant un salon et les différents modèles disponibles, site aussi adapté aux particuliers.</p>
+                                        <p data-lang="shop-item-3-description">Un site en ligne présentant un salon et les différents modèles disponibles</p>
                                     </div>
                                 </div>
                             </a>
@@ -255,7 +255,7 @@
                                     <img src="img/premiumPhone.png" class="img-fluid rounded" alt="Online Shop 1">
                                     <div class="portfolio-overlay">
                                         <h5 class="mt-2" data-lang="shop-item-4-title">Page en ligne d'une boutique de téléphones</h5>
-                                        <p data-lang="shop-item-4-description">Un site en ligne parfait pour du E-Commerce de téléphone pour boutique ou particuliers.</p>
+                                        <p data-lang="shop-item-4-description">Un site en ligne parfait pour du E-Commerce de téléphone. </p>
                                     </div>
                                 </div>
                             </a>
@@ -324,6 +324,21 @@
                             </a>
                         </div>
                     </div>
+
+                    <div class="col-md-4">
+                        <div class="portfolio-item">
+                            <a href="https://portfolio4-wine.vercel.app/" target="_blank">
+                                <div class="portfolio-image">
+                                    <img src="img/portfolio4.png" class="img-fluid rounded" alt="Portfolio 1">
+                                    <div class="portfolio-overlay">
+                                        <h5 class="mt-2" data-lang="portfolio-item-1-title">Portfolio pour un étudiant en Medecine</h5>
+                                        <p data-lang="portfolio-item-1-description">Un site web authentique et creatif.</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
                 </div>
             </div>
 
