--- a/index.html
+++ b/index.html
@@ -311,6 +311,22 @@
                         </div>
                     </div>
 
+                    
+                    <div class="col-md-4">
+                        <div class="portfolio-item">
+                            <a href="https://portfolio8-rho.vercel.app/" target="_blank">
+                                <div class="portfolio-image">
+                                    <img src="img/portfolio8.png" class="img-fluid rounded" alt="Portfolio 1">
+                                    <div class="portfolio-overlay">
+                                        <h5 class="mt-2" data-lang="portfolio-item-1-title">Portfolio pour un étudiant en Chimie</h5>
+                                        <p data-lang="portfolio-item-1-description">Un site web authentique.</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+
                     <div class="col-md-4">
                         <div class="portfolio-item">
                             <a href="https://portfolio3-three-vert.vercel.app/" target="_blank">
