--- a/index.html
+++ b/index.html
@@ -329,11 +329,11 @@
 
                     <div class="col-md-4">
                         <div class="portfolio-item">
-                            <a href="https://portfolio3-three-vert.vercel.app/" target="_blank">
+                            <a href="https://portfolio6-beta.vercel.app/" target="_blank">
                                 <div class="portfolio-image">
-                                    <img src="img/portfolio3.png" class="img-fluid rounded" alt="Portfolio 1">
+                                    <img src="img/portfolio6.png" class="img-fluid rounded" alt="Portfolio 1">
                                     <div class="portfolio-overlay">
-                                        <h5 class="mt-2" data-lang="portfolio-item-3-title">Portfolio pour une étudiante en économie</h5>
+                                        <h5 class="mt-2" data-lang="portfolio-item-3-title">Portfolio pour un étudiant ou ingénieur</h5>
                                         <p data-lang="portfolio-item-3-description">Un site web moderne et attrayant.</p>
                                     </div>
                                 </div>
