--- a/index.html
+++ b/index.html
@@ -234,6 +234,8 @@
                         </div>
                     </div>
 
+                   
+
                     <div class="col-md-4">
                         <div class="portfolio-item">
                             <a href="https://luxe-salon.vercel.app/" target="_blank">
@@ -275,8 +277,24 @@
                             </a>
                         </div>
                     </div>
+
+                    
+            <div class="col-md-4">
+                <div class="portfolio-item">
+                    <a href="https://luxe-wigs.vercel.app/" target="_blank">
+                        <div class="portfolio-image">
+                            <img src="img/luxwigs.png" class="img-fluid rounded" alt="Online Shop 1">
+                            <div class="portfolio-overlay">
+                                <h5 class="mt-2" data-lang="shop-item-6-title">Page en ligne d'un commerce de perruques</h5>
+                                <p data-lang="shop-item-6-description">Un site en ligne présentant un commerce de meches et peruques</p>
+                            </div>
+                        </div>
+                    </a>
                 </div>
             </div>
+                </div>
+            </div>
+
 
             <!-- Portfolios Section -->
             <div class="portfolio-category mt-5 p-4 rounded bg-light">
