--- a/index.html
+++ b/index.html
@@ -296,6 +296,22 @@
             </div>
 
 
+            <div class="col-md-4">
+                <div class="portfolio-item">
+                    <a href="https://foot-maillots.vercel.app/" target="_blank">
+                        <div class="portfolio-image">
+                            <img src="img/footmaillot.png" class="img-fluid rounded" alt="Online Shop 1">
+                            <div class="portfolio-overlay">
+                                <h5 class="mt-2" >Page en ligne d'un commerce de maillots</h5>
+                                <p >supporte ton equipe favorite</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+                </div>
+            </div>
+
             <!-- Portfolios Section -->
             <div class="portfolio-category mt-5 p-4 rounded bg-light">
                 <h3 class="text-center text-primary" data-lang="portfolio-title-2">Portfolios pour vos demandes d'emploi</h3>
