--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
                         <!-- Protection contre les spams (honeypot) -->
                         <input type="hidden" name="_honey" style="display:none">
                         <!-- Rediriger après l'envoi -->
-                        <input type="hidden" name="_next" value="https://web-snape.vercel.app/">
+                        <input type="hidden" name="_next" value="https://websnape.de/">
                         <!-- Adresse email destinataire -->
                         <input type="hidden" name="_email" value="yvandzefak1@gmail.com">
                         <button type="submit" class="btn btn-primary" data-lang="contact-submit">Envoyer</button>
