--- a/index.html
+++ b/index.html
@@ -375,6 +375,20 @@
                         </div>
                     </div>
 
+                    <div class="col-md-4">
+                        <div class="portfolio-item">
+                            <a href="https://portfolio6-beta.vercel.app/" target="_blank">
+                                <div class="portfolio-image">
+                                    <img src="img/portfolio6.png" class="img-fluid rounded" alt="Portfolio 1">
+                                    <div class="portfolio-overlay">
+                                        <h5 class="mt-2" data-lang="portfolio-item-1-title">Portfolio pour un étudiant en Architecture </h5>
+                                        <p data-lang="portfolio-item-1-description">Un site web sobre et sérieux.</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
                 </div>
             </div>
 
