--- a/index.html
+++ b/index.html
@@ -401,6 +401,20 @@
                         </div>
                     </div>
 
+                    <div class="col-md-4">
+                        <div class="portfolio-item">
+                            <a href="https://portfolio8-rho.vercel.app/" target="_blank">
+                                <div class="portfolio-image">
+                                    <img src="img/portfolio8.png" class="img-fluid rounded" alt="Portfolio 1">
+                                    <div class="portfolio-overlay">
+                                        <h5 class="mt-2">Portfolio pour un étudiant en chimie </h5>
+                                        <p >Glacial et frais.</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
                 </div>
             </div>
 
