--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
                             <img src="img/portfolio9.png" class="img-fluid rounded" alt="Portfolio 1">
                             <div class="portfolio-overlay">
                                 <h5 class="mt-2">Portfolio pour un étudiant en chimie des materiaux </h5>
-                                <p >brulant et chaud.</p>
+                                <p >brulant et chaud,.</p>
                             </div>
                         </div>
                     </a>
