update Yvan Dzefack to Yvan Dzefak

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 									<img src="assets/images/home-3/yvan.jpg" style="width: 60px;" alt="">
 								</div>
 								<div class="about-author-content">
-									<h4>Yvan Dzefack</h4>
+									<h4>Yvan Dzefak</h4>
 									<p>CEO & Founder</p>
 								</div>
 							</div>
