--- a/contact.html
+++ b/contact.html
@@ -160,10 +160,10 @@
                 				<div class="single-input-box">
                 					<select name="place" id="place" required>
 						               <option value="">Subject</option>
-						               <option value="opel">Web Development </option>
-						               <option value="audi">Design </option>
-						               <option value="audi">Marketing</option>
-						               <option value="audi">Other Sefvices</option>
+						               <option value="WeD">Web Development </option>
+						               <option value="Design">Design </option>
+						               <option value="Market">Marketing</option>
+						               <option value="Other">Other Services</option>
 					                </select>
                 				</div>
                 			</div>
