--- a/faqs.html
+++ b/faqs.html
@@ -141,7 +141,9 @@
 	    			<h4>Our Help & Faq Us </h4>
 	    			<h1>Navigating FAQs with Speed</h1>
 	    			<h1>and Precision"</h1>
-	    			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis quos ad corporis enim reiciendis nam dolor voluptate, numquam consequuntur dolorem?</p>
+	    			<p>Our team is dedicated to providing clear and accurate answers to all your questions.
+						 We understand the importance of quick, reliable information, and our FAQ section is designed to guide you with ease through any uncertainties. 
+						Let us help you find solutions swiftly, so you can focus on what truly matters.</p>
 	        	</div>
     			<div class="faqs-thumb">
     				<img src="assets/images/inner-images/faqs-1.jpg" alt="">
@@ -154,8 +156,8 @@
     					<img src="assets/images/inner-images/faqs-icon-s.png" alt="">
     				</div>
     				<div class="faqs-icon-content">
-    					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum consequuntur obcaecati 
-						eligendi doloribus voluptatem blanditiis ipsa tenetur mollitia possimus recusandae.</p>
+    					<p>With years of experience and a client-centered approach, we’re here to support you every step of the way.
+							 Whether you need assistance with a project or have a question about our services, our team is committed to delivering personalized, high-quality help tailored to your needs.</p>
     				</div>
     			</div>
 			</div>
