--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<title>WebSnape - Acceuil</title>
-	<meta name="description" content="">
+	<meta name="description" content="WebSnape offers professional digital solutions, including custom website design, web and app development, API integration, and digital marketing. Enhance your online presence with our expert team dedicated to delivering high-quality, tailored services that drive business growth. Contact us for a free consultation!" />
 	<!-- ici tu mettras la description de ta page pour aider le SEO c'est le texte qu'on voit generalement en dessous des liens sur google et meme quand on partage les liens -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="keywords" content="mot cle 1, mot cle 2, etc...">
+	<meta name="keywords" content="custom website design, web development, app development, digital marketing, API integration, IT solutions, web design agency, SEO services, business growth solutions, online branding, website optimization, mobile-friendly websites, creative digital solutions, WebSnape" />
+
 	<!-- ici tu mettra les mots clé séparés d'une virgule chacun-->
 	<!-- Favicon -->
 	<link rel="icon" type="image/png" sizes="56x56" href="assets/images/fav-icon/icon.png">
@@ -322,7 +323,7 @@
 						</div>
 						<div class="about-flex-box">
 							<div class="WebSnape-button style-one">
-								<a href="about.html">About More<i class="bi bi-arrow-right-circle-fill"></i></a>
+								<a href="about.html">About Us<i class="bi bi-arrow-right-circle-fill"></i></a>
 							</div>
 							<div class="about-author">
 								<div class="about-author-thumb">
@@ -776,7 +777,7 @@
 						<div class="single-testimonial-box">
 							<div class="testi-desc">
 								<p>WebSnape created an awesome website for me that totally fits my vibe as a DJ! They added a music player, photo gallery, and even a place for my event schedule.
-									 It’s really easy for my fans to find my mixes and stay updated. Since launching, I’ve seen a big increase in traffic and gig requests. Yvan really knows his stuff!</p>
+									 It’s really easy for my fans to find my mixes and stay updated. Yvan really knows his stuff!</p>
 							</div>
 							<div class="testi-rating">
 								<ul>
