--- a/contact.html
+++ b/contact.html
@@ -317,7 +317,7 @@
 					<div class="row">
 						<div class="col-lg-6 col-md-6">
 							<div class="footer-bottom-content">
-								<p>© 2024 WebSnape. Designed By Eltsine NJITCHOUANG</p>
+								<p>© 2024 WebSnape. Designed By WebSnape</p>
 							</div>
 						</div>
 						<div class="col-lg-6 col-md-6">
